# tracking-lab

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MOT17-Data  MOT17_USAGE.md  MOT20  README.md  analyze.py  export_class_from_onix.py  i_configurable_tracker.h  i_object_tracker.h  i_tracker_telemetry.h  i_visual_tracker.h  impression.cpp  impression.h  inference.cpp  inference.h  lowlightenhancer.cpp  lowlightenhancer.h  main.cpp  test_mot_reader.cpp
TrackerTelemtryLogger/: MotChallengeLogger.cpp  MotChallengeLogger.h
benchmark/: CMakeLists.txt  benchmark_config.h  mot17_benchmark.cpp  mot17_compare_trackers_benchmark.cpp  mot17_minimal_benchmark.cpp
benchmark/docs/: BENCHMARK-CODE-TEMPLATES.md  BENCHMARK-SYSTEM-PLAN.md  BENCHMARK-TODO.md
docs/: BUGFIX-INVALID-BBOX.md  CODE-IMPROVEMENT-ANALYSIS.md  CRITICAL-FIX-TRACKER-ID-PERSISTENCE.md  GIT-FLOW.md  NEW-TRACKER-INTERFACE-DESIGN.md  PERFORMANCE-ANALYSIS.md  explain-architecture-pattern.md
mot/: mot_detection_reader.cpp  mot_detection_reader.h  mot_sequence_reader.cpp  mot_sequence_reader.h
output/: QUICKSTART.md  README.md  run_trackeval.sh  run_trackeval_tracker_compare.sh
scripts/: README.md  compare_versions.sh  rank_trackers.sh  runBenchMarkAndTest.sh  usage.md
scripts/compare_versions_minimal/: README.md  __init__.py  __main__.py  comparator.py  config.py  example_usage.py  multi_comparator.py  multi_reporter.py  reporter.py  requirements.txt  utils.py  visualizer.py
tools/: mot17_tracking_mp4.cpp
trackers/: opencv_tracker_integration.cpp  opencv_tracker_integration.h  reid_extractor.cpp  reid_extractor.h  tracker_factory.h
trackers/bot_sort/: bot_sort_config.h  bot_sort_tracker.cpp  bot_sort_tracker.h  cmc_module.cpp  cmc_module.h
trackers/helpers/: HungarianAlgorithm.cpp  HungarianAlgorithm.h
trackers/kalman_iou/: README.md  kalman_iou_byte_track.cpp  kalman_iou_byte_track.h  kalman_iou_config.h  kalman_iou_tracker.cpp  kalman_iou_tracker.h  kalman_iou_tracker_6state.cpp  kalman_iou_tracker_6state.h
